--- a/fastmri_prostate_classification/configs/adc_t2_mask_final.yaml
+++ b/fastmri_prostate_classification/configs/adc_t2_mask_final.yaml
@@ -18,6 +18,7 @@ model_args:
 data:
       datapath: "/home/lc2382/project/fastMRI_NYU/nifti"
       labelpath: "/home/lc2382/project/fastMRI_NYU/labels/pirads_t2w_npz"
+      t2w_csv_path: "/home/lc2382/project/fastMRI_NYU/labels/t2_slice_level_labels.csv"
       glandmask_path: "/home/lc2382/project/fastMRI_NYU/segm_mask_v2_binarize"
       norm_type: 2                     # 1 = percentile clip, 2 = standardisation, 3 = min-max-scaling, 4 = Gaussian norm 
       
@@ -28,4 +29,4 @@ training:
       max_epochs: 100                      # max_epochs to train for 
       save_model: True                     # Only save model on final set on tuned models
 load_model_epoch: 4
-results_fol: "../../results_t2"
+results_fol: "../../results_t2_paper_split"
