--- a/fastmri_prostate_classification/configs/adc_t2_mask_final.yaml
+++ b/fastmri_prostate_classification/configs/adc_t2_mask_final.yaml
@@ -28,5 +28,5 @@ training:
       save_ROC_AUC: True                   
       max_epochs: 100                      # max_epochs to train for 
       save_model: True                     # Only save model on final set on tuned models
-load_model_epoch: 4
-results_fol: "../../results_t2_paper_split_5e-5lr"
+load_model_epoch: 9
+results_fol: "../../results_t2_paper_split"
