--- a/fastmri_prostate_classification/configs/nofake_adc_t2_mask_final.yaml
+++ b/fastmri_prostate_classification/configs/nofake_adc_t2_mask_final.yaml
@@ -9,15 +9,15 @@ model_args:
       scheduler_plat_loss: True             # True if you want to reduce LR when gains on validation plateau
       scheduler_plat_auc: False             # True if you want to reduce LR when gains on validation plateau
       warm_up: False                        # Warmup
-      initial_lr: 0.00005
-      lr: 0.0001                            # typically 1e-03
+      initial_lr: 0.00001
+      lr: 0.00005                           # typically 1e-03
       momentum: 0.99                        # typically 1e-02
       weight_decay: 0.05                    # 1e-04
       amsgrad: True                         # True to use amsgrad https://www.fast.ai/posts/2018-07-02-adam-weight-decay.html https://openreview.net/forum?id=ryQu7f-RZ
       num_classes: 5
 
 data:
-      use_synthetic_data: True
+      use_synthetic_data: False
       fake_datapath: "/home/lc2382/project/segmentation-guided-diffusion/experiments/ddim-fastMRI_NYU-128-segguided-classCond-CFG-eval_20250416_173309/samples/0399"
       real_datapath: "/home/lc2382/project/fastMRI_NYU/nifti"
       labelpath: "/home/lc2382/project/fastMRI_NYU/labels/pirads_t2w_npz"
