--- a/fastmri_prostate_classification/configs/nofake_adc_t2_mask_final_lr1e-4.yaml
+++ b/fastmri_prostate_classification/configs/nofake_adc_t2_mask_final_lr1e-4.yaml
@@ -11,14 +11,14 @@ model_args:
       warm_up: True                         # Warmup
       warmup_epochs: 5
       initial_lr: 0.00001
-      lr: 0.00005                            # typically 1e-03
+      lr: 0.0001                           # typically 1e-03
       momentum: 0.99                        # typically 1e-02
       weight_decay: 0.05                    # 1e-04
       amsgrad: True                         # True to use amsgrad https://www.fast.ai/posts/2018-07-02-adam-weight-decay.html https://openreview.net/forum?id=ryQu7f-RZ
       num_classes: 5
 
 data:
-      use_synthetic_data: True
+      use_synthetic_data: False
       fake_datapath: "/home/lc2382/project/segmentation-guided-diffusion/experiments/ddim-fastMRI_NYU-128-segguided-classCond-CFG-eval_20250416_173309/samples/0399"
       real_datapath: "/home/lc2382/project/fastMRI_NYU/nifti"
       labelpath: "/home/lc2382/project/fastMRI_NYU/labels/pirads_t2w_npz"
@@ -28,12 +28,13 @@ data:
 training:
       early_stop: False
       patience: 15                          # num epochs to monitor the validation loss for overfitting before early stopping
-      augment: False                       # now deprecated May 05 2025, augment is always applied details see ./utils/custom_data_t2w_mask_adc.py
+      augment: False                       # now deprecated May 05 2025, augment is always applied, details see ./utils/custom_data_t2w_mask_adc.py
       saveims: True                       # Recommend True to check on status of training images especially if augment
       saveims_format: ['png', 'nifti', 'npz']
       save_ROC_AUC: False                   
       max_epochs: 100                      # max_epochs to train for 
-      save_model: True                     # Only save model on final set on tuned models
-
+      save_model_loss: True                     # Only save model on final set on tuned models
+      save_model_auc: True
+      
 load_model_epoch: 4
-results_fol: "/home/lc2382/palmer_scratch/fastMRI/synTrain/results_t2/"
+results_fol: "/home/lc2382/palmer_scratch/fastMRI/realTrain/results_t2/"
