--- a/fastmri_prostate_classification/configs/syn_adc_t2_mask_final_lr5e-5.yaml
+++ b/fastmri_prostate_classification/configs/syn_adc_t2_mask_final_lr5e-5.yaml
@@ -11,7 +11,7 @@ model_args:
       warm_up: True                         # Warmup
       warmup_epochs: 5
       initial_lr: 0.00001
-      lr: 0.0001                            # typically 1e-03
+      lr: 0.00005                            # typically 1e-03
       momentum: 0.99                        # typically 1e-02
       weight_decay: 0.05                    # 1e-04
       amsgrad: True                         # True to use amsgrad https://www.fast.ai/posts/2018-07-02-adam-weight-decay.html https://openreview.net/forum?id=ryQu7f-RZ
@@ -19,10 +19,11 @@ model_args:
 
 data:
       use_synthetic_data: True
-      fake_datapath: "/home/lc2382/project/segmentation-guided-diffusion/experiments/ddim-fastMRI_NYU-128-segguided-classCond-CFG-eval_20250416_173309/samples/0399"
+      syn_datapath: "/home/lc2382/project/segmentation-guided-diffusion/experiments/ddim-fastMRI_NYU-128-segguided-classCond-CFG-eval_20250416_173309/samples/0399"
       real_datapath: "/home/lc2382/project/fastMRI_NYU/nifti"
-      labelpath: "/home/lc2382/project/fastMRI_NYU/labels/pirads_t2w_npz"
+      label_csv_dir: "/home/lc2382/project/segmentation-guided-diffusion/data/labels/t2_slice_level_labels_reversed.csv"
       glandmask_path: "/home/lc2382/project/fastMRI_NYU/segm_mask_v2_binarize"
+      atlas_CGPZ_path: "/home/lc2382/project/segmentation-guided-diffusion/data/CG+PZ_seg"
       norm_type: 2                     # 1 = percentile clip, 2 = standardisation, 3 = min-max-scaling, 4 = Gaussian norm 
       
 training:
@@ -33,7 +34,7 @@ training:
       saveims_format: ['png', 'nifti', 'npz']
       save_ROC_AUC: False                   
       max_epochs: 100                      # max_epochs to train for 
-      save_model: True                     # Only save model on final set on tuned models
+      save_model_loss: True                     # Only save model on final set on tuned models
+      save_model_auc: True
 
-# load_model_epoch: 4
-results_fol: "/home/lc2382/palmer_scratch/fastMRI/synTrain/results_t2/t2w/20250507_022815/"
+results_fol: "/home/lc2382/palmer_scratch/fastMRI/synTrain/results_t2/"
