--- a/fastmri_prostate_classification/configs/combined_adc_t2_mask_final_lr5e-5_200epochs.yaml
+++ b/fastmri_prostate_classification/configs/combined_adc_t2_mask_final_lr5e-5_200epochs.yaml
@@ -19,8 +19,8 @@ model_args:
 
 data:
       use_synthetic_data: True
-      combine_real_data: False
-      syn_datapath: "/home/lc2382/project/segmentation-guided-diffusion/experiments/ddim-fastMRI_NYU-128-segguided-classCond-CFG-eval_20250416_173309/samples/0399"
+      combine_real_data: True
+      syn_datapath: "/home/lc2382/project/segmentation-guided-diffusion/experiments/ddim-fastMRI_NYU-128-segguided-classCond-CFG-eval_20250528_033034/samples/0399"
       real_datapath: "/home/lc2382/project/fastMRI_NYU/nifti"
       label_csv_dir: "/home/lc2382/project/segmentation-guided-diffusion/data/labels/t2_slice_level_labels_reversed.csv"
       glandmask_path: "/home/lc2382/project/fastMRI_NYU/segm_mask_v2_binarize"
